added css styling, added code comments

--- a/index.html
+++ b/index.html
@@ -12,8 +12,18 @@
     <script src="gameScore.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
 
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <!-- <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style> -->
   </head>
   <body>
+    <div class="container">
+      <div id="canvas"></div>
+      <div id="instructions">
+        <h1>Instructions</h1>
+        <p>Movement Controlls:</p>
+        <p>Arrows: <strong>Up, Down, Left, Right</strong></p>
+        <p>Fire: <strong>spacebar</strong></p>
+      </div>
+    </div>
   </body>
 </html>
