corrected an issue where the screen scrolls when the spacebar is pressed

--- a/index.html
+++ b/index.html
@@ -17,12 +17,22 @@
   </head>
   <body>
     <div class="container">
-      <div id="canvas"></div>
-      <div id="instructions">
-        <h1>Instructions</h1>
-        <p>Movement Controlls:</p>
-        <p>Arrows: <strong>Up, Down, Left, Right</strong></p>
-        <p>Fire: <strong>spacebar</strong></p>
+      <div id="canvas">
+        <div class="showInstructions"><p>Hover to show instructions</p></div>
+        <div class="instructions">
+          <h1>Instructions</h1>
+          <ol>
+            <li>Destroy all asteroids!</li>
+            <li>Watch out for planet gravity</li>
+            <li>Refresh webpage to restart</li>
+            <li><h3>Movement Controlls:</h3>
+              <ul>
+                <li>Arrows: <strong>Up, Down, Left, Right</strong></li>
+                <li>Fire: <strong>spacebar</strong></li>
+              </ul>
+            </li>
+          </ol>
+        </div>
       </div>
     </div>
   </body>
