added a navigation button that takes people back to the info page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <body>
     <div class="container">
       <div id="canvas">
+        <button id="myButton" onclick="window.location.href='https://cerrmor.github.io/project_pages/asteroidClone.html';">Project Page</button>
         <div class="showInstructions"><p>Hover to show instructions</p></div>
         <div class="instructions">
           <h1>Instructions</h1>
